@@ -2,10 +2,14 @@ package com.dangdangsalon.domain.notification.service;
 
 import com.dangdangsalon.domain.estimate.entity.Estimate;
 import com.dangdangsalon.domain.estimate.repository.EstimateRepository;
-import com.dangdangsalon.domain.estimate.request.entity.EstimateRequest;
 import com.dangdangsalon.domain.groomerprofile.entity.GroomerProfile;
 import com.dangdangsalon.domain.notification.dto.NotificationDto;
 import com.dangdangsalon.domain.notification.dto.ReviewNotificationDto;
+import com.dangdangsalon.domain.notification.scheduler.NotificationScheduler;
+import com.dangdangsalon.domain.orders.entity.Orders;
+import com.dangdangsalon.domain.payment.entity.Payment;
+import com.dangdangsalon.domain.payment.entity.PaymentStatus;
+import com.dangdangsalon.domain.payment.repository.PaymentRepository;
 import com.dangdangsalon.domain.user.entity.User;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
@@ -23,7 +27,6 @@ import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.*;
 
-import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.*;
@@ -53,6 +56,9 @@ class NotificationSchedulerTest {
     private ValueOperations<String, String> valueOperations;
 
     @Mock
+    private PaymentRepository paymentRepository;
+
+    @Mock
     private RedisNotificationService redisNotificationService;
 
     @InjectMocks
@@ -73,44 +79,48 @@ class NotificationSchedulerTest {
         // Given
         LocalDateTime tomorrow = LocalDateTime.now().plusDays(1);
         Estimate mockEstimate = mock(Estimate.class);
+        Orders mockOrder = mock(Orders.class);
+        Payment mockPayment = mock(Payment.class);
 
-        EstimateRequest mockRequest = mock(EstimateRequest.class);
         User mockUser = mock(User.class);
 
         // Mock 데이터 설정
         when(mockEstimate.getDate()).thenReturn(tomorrow);
         when(mockEstimate.getId()).thenReturn(1L);
-        when(mockEstimate.getEstimateRequest()).thenReturn(mockRequest);
-        when(mockRequest.getUser()).thenReturn(mockUser);
+        when(mockOrder.getEstimate()).thenReturn(mockEstimate);
+        when(mockOrder.getUser()).thenReturn(mockUser);
+        when(mockPayment.getOrders()).thenReturn(mockOrder);
+        when(mockPayment.getId()).thenReturn(1L);
+
         when(mockUser.getId()).thenReturn(1L);
         when(mockUser.getEmail()).thenReturn("test1234@naver.com");
-        when(mockUser.getName()).thenReturn("테스트 사용자"); // 이름 설정
+        when(mockUser.getName()).thenReturn("테스트 사용자");
 
-        when(estimateRepository.findReservationsForTomorrow(any(), any())).thenReturn(List.of(mockEstimate));
-        when(notificationService.getFcmToken(1L)).thenReturn(Optional.of("dummyFcmToken"));
+        when(paymentRepository.findByPaymentStatus(PaymentStatus.ACCEPTED)).thenReturn(List.of(mockPayment));
+        when(notificationService.getFcmTokens(1L)).thenReturn(Arrays.asList("dummyFcmToken1", "dummyFcmToken2"));
 
         // When
-        notificationScheduler.sendReservationReminder();
+        notificationScheduler.sendAcceptedPaymentReminders();
 
         // Then
-        verify(notificationService, times(1)).sendNotificationWithData(
-                eq("dummyFcmToken"),
+        verify(notificationService, times(2)).sendNotificationWithData(
+                anyString(),
                 eq("예약일 알림"),
                 anyString(),
                 eq("RESERVATION_REMINDER"),
-                eq(1L)
+                anyLong()
         );
         verify(notificationEmailService, times(1)).sendEmailWithTemplate(
                 eq("test1234@naver.com"),
                 eq("예약일 알림"),
                 eq("/templates/email.html"),
                 eq(Map.of(
-                        "userName", "테스트 사용자", // Mock에서 설정한 값 확인
+                        "userName", "테스트 사용자",
                         "reservationDateTime", tomorrow.format(DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm"))
                 ))
         );
         verify(redisNotificationService, times(1)).saveNotificationToRedis(
-                eq(1L), eq("예약일 알림"), anyString(), eq("RESERVATION_REMINDER"), eq(1L)
+                eq(1L), eq("예약일 알림"), anyString(), eq("RESERVATION_REMINDER"), anyLong()
         );
     }
 
@@ -120,9 +130,8 @@ class NotificationSchedulerTest {
         // Given
         String key = "notifications:1";
 
-        // 만료된 알림 데이터
         NotificationDto oldNotification = NotificationDto.builder()
-                .createdAt(LocalDateTime.now().minusDays(15)) // 오래된 알림
+                .createdAt(LocalDateTime.now().minusDays(15))
                 .id("oldNotification123")
                 .title("Old Notification")
                 .body("This is an old notification")
@@ -133,7 +142,6 @@ class NotificationSchedulerTest {
 
         String oldNotificationJson = objectMapper.writeValueAsString(oldNotification);
 
-        // Mock 설정
         when(redisTemplate.keys("notifications:*")).thenReturn(Set.of(key));
         when(listOperations.range(key, 0, -1)).thenReturn(Collections.singletonList(oldNotificationJson));
         when(objectMapper.readValue(eq(oldNotificationJson), eq(NotificationDto.class))).thenReturn(oldNotification);
@@ -144,7 +152,6 @@ class NotificationSchedulerTest {
         // Then
         verify(listOperations, times(1)).remove(eq(key), eq(1L), eq(oldNotificationJson));
     }
-
 
     @Test
     @DisplayName("리뷰 작성 요청 알림 성공")
@@ -165,14 +172,14 @@ class NotificationSchedulerTest {
         when(valueOperations.get(key)).thenReturn(jsonData);
         when(objectMapper.readValue(eq(jsonData), eq(ReviewNotificationDto.class))).thenReturn(mockReminder);
         when(estimateRepository.findWithEstimateById(1L)).thenReturn(Optional.of(mockEstimate));
-        when(notificationService.getFcmToken(1L)).thenReturn(Optional.of("dummyFcmToken"));
+        when(notificationService.getFcmTokens(1L)).thenReturn(Arrays.asList("dummyFcmToken1", "dummyFcmToken2"));
 
         // When
         notificationScheduler.sendReviewReminders();
 
         // Then
-        verify(notificationService, times(1)).sendNotificationWithData(
-                eq("dummyFcmToken"),
+        verify(notificationService, times(2)).sendNotificationWithData(
+                anyString(),
                 eq("리뷰 작성 요청"),
                 eq("테스트 미용사님에 대한 리뷰를 작성해주세요!"),
                 eq("REVIEW_REQUEST"),
